# WiFiViz

./: .gitignore  CMakeLists.txt  LICENSE  MLO_ADAPTATION_UPDATE.md  NS3_APP_CHECKLIST.md  README.md  README.zh-CN.md
Simulation/Default/Complex/qos-mixed-traffic/: info.md  qos-mixed-traffic.cc
Simulation/Default/Complex/three-bss-overlap/: info.md  three-bss-overlap.cc
Simulation/Default/Complex/two-bss-hidden-node/: info.md  two-bss-hidden-node.cc
Simulation/Default/Complex/wifi-txop-aggregation/: info.md  wifi-txop-aggregation.cc
Simulation/Default/Simple/basic-ap-sta/: basic-ap-sta.cc  info.md
Simulation/Default/Simple/first/: first.cc
Simulation/Default/Simple/third/: third.cc
Simulation/Default/Simple/two-sta-uplink/: info.md  two-sta-uplink.cc
contrib/Ns3Visualizer/: CMakeLists.txt  README.md
contrib/Ns3Visualizer/Simulation/Default/Complex/wifi-txop-aggregation/: wifi-txop-aggregation.cc
contrib/Ns3Visualizer/Simulation/Default/Simple/first/: first.cc  info.md
contrib/Ns3Visualizer/Simulation/Default/Simple/third/: info.md  third.cc
contrib/Ns3Visualizer/doc/: QNs3.rst
contrib/Ns3Visualizer/examples/: CMakeLists.txt  QNs3-example.cc  SniffUtils-example.cc
contrib/Ns3Visualizer/helper/: QNs3-helper.cc
contrib/Ns3Visualizer/model/: SniffUtils.h
contrib/Ns3Visualizer/test/: QNs3-test-suite.cc
contrib/Ns3Visualizer/tools/: visualizer.cc
contrib/Ns3Visualizer/ui/: .gitignore  CMakeLists.txt  JsonHelper.h  Ns3Visualizer.pro  Sample_Ap_private.json  Sample_Sta_private.json  Sample_public.json  antennas.ui  ap_config.h  ap_config.ui  build.sh  config_ui_style.cpp  config_ui_style.h  edca_config.cpp  flow_dialog.cpp  flow_dialog.h  flow_dialog.ui  greeting.ui  latency_chart.cpp  latency_chart.h  legend_overlay.cpp  main.cpp  mainwindow.cpp  node_config.h  node_throughput_chart.cpp  node_throughput_chart.h  node_traffic_panel.h  page1_model_chose.cpp  page1_model_chose.ui  phy_state_pie_chart.cpp  phy_state_pie_chart.h  ppdu_adapter.h  ppdu_composition_chart.cpp  ppdu_detail_window.cpp  ppdu_info_overlay.cpp  ppdu_timeline_view.cpp  ppdu_timeline_view.h  ppdu_visual_item.h  process_terminal.h  qt_ppdu_reader.cpp  (+15 more)
contrib/Ns3Visualizer/ui/qss/: dark.qss  light.qss
contrib/Ns3Visualizer/ui/utils/: CMakeLists.txt  build.sh  ns3-script-generator.cc
contrib/Ns3Visualizer/utils/doc/: README_ch.md  README_en.md
doc/: README_ch.md  README_en.md  performance-overhead-benchmark.md  wifiviz-review.md  wifiviz.patch  wifiviz.rst
examples/: CMakeLists.txt  wifiviz-basic-example.cc  wifiviz-overhead-benchmark.cc
helper/: QNs3-helper.cc  QNs3-helper.h
model/: QNs3.cc  QNs3.h  SniffUtils.cc  SniffUtils.h  wifiviz.h
ns-3.46/contrib/Ns3Visualizer/Simulation/Designed/Designed_26_2_23_2148/ApConfigJson/: Ap_1.json
ns-3.46/contrib/Ns3Visualizer/Simulation/Designed/Designed_26_2_23_2148/StaConfigJson/: Sta_1.json  Sta_2.json
ns-3.46/contrib/Ns3Visualizer/model/: QNs3.cc  QNs3.h  SniffUtils.cc  SniffUtils.h
ns-3.46/contrib/Ns3Visualizer/ui/: JsonHelper.h  ap_config.cpp  legend_overlay.cpp  node_config.cpp  ppdu_adapter.h  ppdu_timeline_view.cpp  ppdu_timeline_view.h  ppdu_visual_item.h  qt_ppdu_reader.cpp  shm.h  simu_config.cpp  throughput_chart.cpp  throughput_chart.h
test/: wifiviz-test-suite.cc
tools/: visualizer.cc  wifiviz-hidden.sh
ui/: CMakeLists.txt  JsonHelper.cpp  JsonHelper.h  WiFiViz.pro  antennas.cpp  antennas.h  ap_config.cpp  build.sh  chart_filter.h  clean.sh  configgraphicsview.cpp  configgraphicsview.h  edca_config.h  edca_config.ui  greeting.cpp  greeting.h  greeting.ui  image_viewer.cpp  image_viewer.h  indus_widget.cpp  indus_widget.h  latency_chart.cpp  legend_overlay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcs_distribution_chart.cpp  mcs_distribution_chart.h  node_config.cpp  node_config.ui  node_traffic_panel.cpp  page1_model_chose.cpp  page1_model_chose.h  phy_state_pie_chart.cpp  phy_state_pie_chart.h  ppdu_adapter.cpp  ppdu_adapter.h  ppdu_composition_chart.h  ppdu_detail_window.h  (+20 more)
ui/utils/: CMakeLists.txt  build.sh  wifiviz-script-generator.cc
